# stooqie

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/: snp_100.csv  snp_500.csv  stock_tickers.csv  ticker.parquet
stooqie/: _ticker.py  bump.py  cli.py  dashboard.py  io.py  models.py  textual_plot.py  ticker.py
stooqie/utils/: log.py
