[project]
name = "stooqie"
version = "0.1.0"
description = "Python tool to look at Stocks."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas[pyarrow]>=2.2.3",
    "requests>=2.32.3",
    "textual>=2.1.2",
    "textual-plotext>=1.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.10",
]

[project.scripts]
stooqie = "stooqie.cli:cli"

[tool.uv]
package = true

[tool.setuptools]
packages = ["stooqie"]

[tool.ruff]
line-length = 120
indent-width = 4

target-version = "py313"

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "RUF", # ruff-specific-rules
    "BLE", # Blind except 
]
ignore = []

# Exclude specific folders
exclude = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pyright]
typeCheckingMode = "standard" 
reportMissingTypeArgument = "error"
reportUnknownParameterType = "error"
reportMissingParameterType = "error"
